@@ -8,6 +8,8 @@ Under Development
 Features added
 --------------
 
+* Support for custom Element class instantiation in lxml.sax
+
 * '.' represents empty ObjectPath (identity)
 
 * EXSLT RegExp support in standard XPath (not only XSLT)
